--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,12 +6,11 @@ on:
     - cron: '0 8 * * 6'
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
       - run: |
-          mkdir -p ~/dotfiles-install-dir
           git clone https://github.com/brucificus/dotfiles
-          HOME=~/dotfiles-install-dir dotfiles/install.sh --except shell
+          ./dotfiles/install.ps1 --except shell
       - run: |
-          HOME=~/dotfiles-install-dir ./install.sh
+          ./install.ps1
