--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -9,6 +9,9 @@
     ~/.dotfiles_local: ''
     ~/.gitconfig_local:
     ~/Documents/PowerShell/Microsoft.PowerShell_profile.ps1: ~/.config/powershell/Microsoft.PowerShell_profile.ps1
+    ~/bin/:
+      glob: true
+      path: bin/*
 
 - shell:
   - git submodule sync --recursive
