✨ Less-Aggressive SSH Setup

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -10,6 +10,8 @@
     ~/.gitconfig_local:
     ~/.nvm:
     ~/.ssh:
+      glob: true
+      path: ssh/*
 
 - shell:
   - git submodule sync --recursive
