--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -25,6 +25,7 @@
       glob: true
       path: config/*
     ~/AppData/Local/Packages/Microsoft.WindowsTerminal_8wekyb3d8bbwe/LocalState: ~/.config/WindowsTerminal
+    ~/AppData/Roaming/Elgato/StreamDeck/ProfilesV2: config/ElgatoStreamDeck/profiles
 
 - shell:
   - git submodule sync --recursive
