--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -26,6 +26,7 @@
       path: config/*
     ~/AppData/Local/Packages/Microsoft.WindowsTerminal_8wekyb3d8bbwe/LocalState: ~/.config/WindowsTerminal
     ~/AppData/Roaming/Elgato/StreamDeck/ProfilesV2: config/ElgatoStreamDeck/profiles
+    ~/AppData/Roaming/TC-Helicon/GOXLR: config/GoXLR/AppDataRoaming
 
 - shell:
   - git submodule sync --recursive
