--- a/config/GoXLR/AppDataRoaming/GoXLR.settings
+++ b/config/GoXLR/AppDataRoaming/GoXLR.settings
@@ -3,19 +3,20 @@
 <PROPERTIES>
   <VALUE name="developerMode" val=""/>
   <VALUE name="doUpdateCheck" val="1"/>
-  <VALUE name="profilePath" val="C:\Users\Bruce\OneDrive\Personal\Roaming\Documents\GoXLR\Profiles"/>
-  <VALUE name="samplesPath" val="C:\Users\Bruce\OneDrive\Personal\Roaming\Documents\GoXLR\Samples"/>
-  <VALUE name="presetPath" val="C:\Users\Bruce\OneDrive\Personal\Roaming\Documents\GoXLR\Presets"/>
+  <VALUE name="betaMode" val=""/>
+  <VALUE name="profilePath" val="C:\Users\Bruce\OneDrive\Workstations\LudicParacosm\Documents\GoXLR\Profiles"/>
+  <VALUE name="samplesPath" val="C:\Users\Bruce\OneDrive\Workstations\LudicParacosm\Documents\GoXLR\Samples"/>
+  <VALUE name="presetPath" val="C:\Users\Bruce\OneDrive\Workstations\LudicParacosm\Documents\GoXLR\Presets"/>
   <VALUE name="MIC_GATE_ATTEN" val="40"/>
   <VALUE name="MIC_GATE_THRESOLD" val="-42"/>
-  <VALUE name="iconPath" val="C:\Users\Bruce\OneDrive\Personal\Roaming\Documents\GoXLR\Icons"/>
+  <VALUE name="iconPath" val="C:\Users\Bruce\OneDrive\Workstations\LudicParacosm\Documents\GoXLR\Icons"/>
   <VALUE name="AnalyticsAsked" val="1"/>
-  <VALUE name="bleepLevel" val="-15"/>
-  <VALUE name="TutorialRan" val="1"/>
-  <VALUE name="mainWindowPos" val="1390 127 1302 984"/>
   <VALUE name="connectedProdID" val="36832"/>
   <VALUE name="lastConnectedProdID" val="36832"/>
   <VALUE name="lastLoadedProfile" val="1 - Teal Test.goxlr"/>
+  <VALUE name="AnalyticsParticipate" val="1"/>
+  <VALUE name="UUID" val="24e19ff7d3f240c1b7e9cfeb3be67b7e"/>
+  <VALUE name="TutorialRan" val="1"/>
   <VALUE name="firstConnect" val="0"/>
   <VALUE name="DYNAMIC_MIC_GAIN" val="0.00000000000000000000"/>
   <VALUE name="compAdvanced" val="1"/>
@@ -55,5 +56,4 @@
   <VALUE name="MIC_COMP_MACRO" val="100.00000000000000000000"/>
   <VALUE name="StreamdeckUsingTwoPCs" val="0"/>
   <VALUE name="StreamdeckSecondPCName" val=""/>
-  <VALUE name="betaMode" val=""/>
 </PROPERTIES>
