--- a/config/WindowsTerminal/settings.json
+++ b/config/WindowsTerminal/settings.json
@@ -87,6 +87,15 @@
                 "guid": "{16c54bbd-c2c6-5271-96e7-009a87ff44fb}",
                 "hidden": false,
                 "name": "VS 2019 Developer Powershell"
+            },
+            {
+                "guid": "{2c4de342-38b7-51cf-b940-2309a097f518}",
+                "hidden": false,
+                "name": "Ubuntu",
+                "source": "Windows.Terminal.Wsl",
+                "backgroundImage": "C:\\Users\\Bruce\\OneDrive\\Pictures\\Graphics\\Wallpaper\\Windows Terminal\\Ubuntu\\ubuntu-logo32.png",
+                "backgroundImageStretchMode": "none",
+                "backgroundImageAlignment": "bottomRight"
             }
         ]
     },
