--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 config/GoXLR/AppDataRoaming/GoXLR_RecentColours.settings
 config/GoXLR/AppDataRoaming/GoXLR_temp*.settings
 config/WindowsTerminal/*.backup
+/config/GoXLR/AppDataRoaming/SDPluginLogs
