--- a/config/GoXLR/AppDataRoaming/GoXLR.settings
+++ b/config/GoXLR/AppDataRoaming/GoXLR.settings
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <PROPERTIES>
-  <VALUE name="developerMode" val=""/>
-  <VALUE name="doUpdateCheck" val="1"/>
+  <VALUE name="developerMode" val="0"/>
+  <VALUE name="doUpdateCheck" val="0"/>
   <VALUE name="profilePath" val="C:\Users\Bruce\OneDrive\Workstations\ArdentPeity\Documents\GoXLR\Profiles"/>
   <VALUE name="samplesPath" val="C:\Users\Bruce\OneDrive\Workstations\ArdentPeity\Documents\GoXLR\Samples"/>
   <VALUE name="micProfilesPath" val="C:\Users\Bruce\OneDrive\Workstations\ArdentPeity\Documents\GoXLR\MicProfiles"/>
@@ -13,9 +13,13 @@
   <VALUE name="AnalyticsAsked" val="1"/>
   <VALUE name="AnalyticsParticipate" val="0"/>
   <VALUE name="TutorialRan" val="1"/>
-  <VALUE name="lastLoadedProfile" val="1 - Teal Test.goxlr"/>
+  <VALUE name="lastLoadedProfile" val="1 - Teal Test_copy.goxlr"/>
   <VALUE name="mainWindowPos" val="703 193 1154 1007"/>
   <VALUE name="connectedProdID" val="36832"/>
   <VALUE name="lastConnectedProdID" val="36832"/>
   <VALUE name="firstConnect" val="0"/>
+  <VALUE name="forceAppUpdate" val=""/>
+  <VALUE name="defaultProfilesWritten" val="1"/>
+  <VALUE name="LastLoadedMicProfileFullPath" val="C:\Users\Bruce\OneDrive\Workstations\ArdentPeity\Documents\GoXLR\MicProfiles\DEFAULT.goxlrMicProfile"/>
+  <VALUE name="AutoCheckForUpdates" val="1"/>
 </PROPERTIES>
