--- a/config/WindowsTerminal/settings.json
+++ b/config/WindowsTerminal/settings.json
@@ -4,16 +4,16 @@
     "actions": 
     [
         {
-            "command": "paste",
-            "keys": "ctrl+v"
-        },
-        {
             "command": 
             {
                 "action": "copy",
                 "singleLine": false
             },
             "keys": "ctrl+c"
+        },
+        {
+            "command": "paste",
+            "keys": "ctrl+v"
         },
         {
             "command": "find",
@@ -32,6 +32,12 @@
     "copyFormatting": "none",
     "copyOnSelect": false,
     "defaultProfile": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
+    "newTabMenu": 
+    [
+        {
+            "type": "remainingProfiles"
+        }
+    ],
     "profiles": 
     {
         "defaults": 
@@ -39,77 +45,74 @@
             "bellStyle": 
             [
                 "audible",
-                "window",
-                "taskbar"
+                "window"
             ],
-            "colorScheme": "Cobalt2",
             "font": 
             {
-                "face": "CaskaydiaCove NF"
+                "face": "CaskaydiaCove Nerd Font Mono"
             },
-            "opacity": 70,
-            "useAcrylic": true
+            "useAtlasEngine": true
         },
         "list": 
         [
             {
-                "experimental.retroTerminalEffect": true,
-                "guid": "{61c54bbd-c2c6-5271-96e7-009a87ff44bf}",
-                "hidden": false,
-                "name": "Windows PowerShell"
-            },
-            {
-                "experimental.retroTerminalEffect": true,
-                "guid": "{0caa0dad-35be-5f56-a8ff-afceeeaa6101}",
-                "hidden": false,
-                "name": "Command Prompt"
-            },
-            {
-                "backgroundImage": "C:\\Users\\Bruce\\OneDrive\\Pictures\\Graphics\\Wallpaper\\Windows Terminal\\Azure\\logo_azure.png",
-                "backgroundImageAlignment": "bottomRight",
-                "backgroundImageStretchMode": "uniform",
-                "guid": "{b453ae62-4e3d-5e58-b989-0a998ec441b8}",
-                "hidden": false,
-                "name": "Azure Cloud Shell",
-                "source": "Windows.Terminal.Azure"
-            },
-            {
-                "experimental.retroTerminalEffect": true,
-                "guid": "{c5b98eb9-0ded-534e-b3fd-5b2ab447503f}",
-                "hidden": false,
-                "name": "Developer Command Prompt for VS 2022",
-                "source": "Windows.Terminal.VisualStudio"
-            },
-            {
-                "experimental.retroTerminalEffect": true,
-                "guid": "{69218d1f-4599-5c12-be57-03b5b28ae002}",
-                "hidden": false,
-                "name": "Developer PowerShell for VS 2022",
-                "source": "Windows.Terminal.VisualStudio"
-            },
-            {
-                "backgroundImage": "C:\\Users\\Bruce\\OneDrive\\Pictures\\Graphics\\Wallpaper\\Windows Terminal\\Windows\\Fluent Windows - Dark - 4k.jpg",
-                "backgroundImageAlignment": "bottomRight",
-                "backgroundImageStretchMode": "uniformToFill",
                 "guid": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
                 "hidden": false,
                 "name": "PowerShell",
                 "source": "Windows.Terminal.PowershellCore"
             },
             {
-                "backgroundImage": "C:\\Users\\Bruce\\OneDrive\\Pictures\\Graphics\\Wallpaper\\Windows Terminal\\Ubuntu\\ubuntu-logo32.png",
-                "backgroundImageAlignment": "bottomRight",
-                "backgroundImageStretchMode": "uniform",
-                "guid": "{2c4de342-38b7-51cf-b940-2309a097f518}",
+                "colorScheme": "Campbell",
+                "commandline": "\"C:\\Users\\bmarkham\\AppData\\Local\\Microsoft\\WindowsApps\\Microsoft.PowerShell_8wekyb3d8bbwe\\pwsh.exe\"",
+                "elevate": true,
+                "guid": "{9653844c-dc22-40ef-ae9c-755ec29ab02c}",
                 "hidden": false,
+                "icon": "ms-appx:///ProfileIcons/pwsh.png",
+                "name": "PowerShell (elevated)",
+                "startingDirectory": "%USERPROFILE%"
+            },
+            {
+                "guid": "{51855cb2-8cce-5362-8f54-464b92b32386}",
+                "hidden": false,
+                "name": "Ubuntu",
+                "source": "CanonicalGroupLimited.Ubuntu_79rhkp1fndgsc"
+            },
+            {
+                "commandline": "%SystemRoot%\\System32\\WindowsPowerShell\\v1.0\\powershell.exe",
+                "guid": "{61c54bbd-c2c6-5271-96e7-009a87ff44bf}",
+                "hidden": true,
+                "name": "Windows PowerShell"
+            },
+            {
+                "commandline": "%SystemRoot%\\System32\\cmd.exe",
+                "experimental.retroTerminalEffect": true,
+                "guid": "{0caa0dad-35be-5f56-a8ff-afceeeaa6101}",
+                "hidden": false,
+                "name": "Command Prompt"
+            },
+            {
+                "guid": "{b453ae62-4e3d-5e58-b989-0a998ec441b8}",
+                "hidden": true,
+                "name": "Azure Cloud Shell",
+                "source": "Windows.Terminal.Azure"
+            },
+            {
+                "guid": "{2c4de342-38b7-51cf-b940-2309a097f518}",
+                "hidden": true,
                 "name": "Ubuntu",
                 "source": "Windows.Terminal.Wsl"
             },
             {
-                "guid": "{16208362-94fc-5b1f-a491-5b2624d5ab56}",
-                "hidden": true,
-                "name": "Visual Studio Debug Console",
-                "source": "VSDebugConsole"
+                "guid": "{d6226076-4d0b-5db0-a492-303cfd1c729d}",
+                "hidden": false,
+                "name": "Developer Command Prompt for VS 2022",
+                "source": "Windows.Terminal.VisualStudio"
+            },
+            {
+                "guid": "{e41c6961-ac68-51e2-b62f-63134f9bca6a}",
+                "hidden": false,
+                "name": "Developer PowerShell for VS 2022",
+                "source": "Windows.Terminal.VisualStudio"
             }
         ]
     },
@@ -160,29 +163,6 @@
             "selectionBackground": "#FFFFFF",
             "white": "#CCCCCC",
             "yellow": "#C19C00"
-        },
-        {
-            "background": "#132738",
-            "black": "#000000",
-            "blue": "#1460D2",
-            "brightBlack": "#555555",
-            "brightBlue": "#5555FF",
-            "brightCyan": "#6AE3FA",
-            "brightGreen": "#3BD01D",
-            "brightPurple": "#FF55FF",
-            "brightRed": "#F40E17",
-            "brightWhite": "#FFFFFF",
-            "brightYellow": "#EDC809",
-            "cursorColor": "#FFFFFF",
-            "cyan": "#00BBBB",
-            "foreground": "#FFFFFF",
-            "green": "#38DE21",
-            "name": "Cobalt2",
-            "purple": "#FF005D",
-            "red": "#FF0000",
-            "selectionBackground": "#FFFFFF",
-            "white": "#BBBBBB",
-            "yellow": "#FFE50A"
         },
         {
             "background": "#282C34",
@@ -323,6 +303,29 @@
             "yellow": "#C4A000"
         },
         {
+            "background": "#300A24",
+            "black": "#171421",
+            "blue": "#0037DA",
+            "brightBlack": "#767676",
+            "brightBlue": "#08458F",
+            "brightCyan": "#2C9FB3",
+            "brightGreen": "#26A269",
+            "brightPurple": "#A347BA",
+            "brightRed": "#C01C28",
+            "brightWhite": "#F2F2F2",
+            "brightYellow": "#A2734C",
+            "cursorColor": "#FFFFFF",
+            "cyan": "#3A96DD",
+            "foreground": "#FFFFFF",
+            "green": "#26A269",
+            "name": "Ubuntu-ColorScheme",
+            "purple": "#881798",
+            "red": "#C21A23",
+            "selectionBackground": "#FFFFFF",
+            "white": "#CCCCCC",
+            "yellow": "#A2734C"
+        },
+        {
             "background": "#000000",
             "black": "#000000",
             "blue": "#000080",
@@ -346,6 +349,49 @@
             "yellow": "#808000"
         }
     ],
-    "trimBlockSelection": true,
-    "useAcrylicInTabRow": true
+    "themes": 
+    [
+        {
+            "name": "legacyDark",
+            "tab": 
+            {
+                "background": null,
+                "showCloseButton": "always",
+                "unfocusedBackground": null
+            },
+            "window": 
+            {
+                "applicationTheme": "dark",
+                "useMica": false
+            }
+        },
+        {
+            "name": "legacyLight",
+            "tab": 
+            {
+                "background": null,
+                "showCloseButton": "always",
+                "unfocusedBackground": null
+            },
+            "window": 
+            {
+                "applicationTheme": "light",
+                "useMica": false
+            }
+        },
+        {
+            "name": "legacySystem",
+            "tab": 
+            {
+                "background": null,
+                "showCloseButton": "always",
+                "unfocusedBackground": null
+            },
+            "window": 
+            {
+                "applicationTheme": "system",
+                "useMica": false
+            }
+        }
+    ]
 }
