🔧 Minor Updates Based on Primary Profile Overhaul

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -3,12 +3,11 @@
       create: true
       relink: true
 
-- clean: ['~', '~/.config']
+- clean: ['~', '~/.config', '~/.nvm']
 
 - link:
     ~/.dotfiles_local: ''
     ~/.gitconfig_local:
-    ~/.nvm:
     ~/.shell_local_after:
 
 - shell:
