--- a/config/WindowsTerminal/settings.json
+++ b/config/WindowsTerminal/settings.json
@@ -32,10 +32,18 @@
     "copyFormatting": "none",
     "copyOnSelect": false,
     "defaultProfile": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
+    "newTabMenu": 
+    [
+        {
+            "type": "remainingProfiles"
+        }
+    ],
     "profiles": 
     {
         "defaults": 
         {
+            "adjustIndistinguishableColors": "indexed",
+            "antialiasingMode": "cleartype",
             "bellStyle": 
             [
                 "audible",
@@ -47,22 +55,49 @@
             {
                 "face": "CaskaydiaCove NF"
             },
+            "intenseTextStyle": "all",
             "opacity": 70,
-            "useAcrylic": true
+            "useAcrylic": true,
+            "useAtlasEngine": true
         },
         "list": 
         [
             {
-                "experimental.retroTerminalEffect": true,
-                "guid": "{61c54bbd-c2c6-5271-96e7-009a87ff44bf}",
+                "backgroundImage": "C:\\Users\\Bruce\\OneDrive\\Pictures\\Graphics\\Wallpaper\\Windows Terminal\\Windows\\Fluent Windows - Dark - 4k.jpg",
+                "backgroundImageAlignment": "bottomRight",
+                "backgroundImageOpacity": 0.39,
+                "backgroundImageStretchMode": "uniformToFill",
+                "guid": "{5fb123f1-af88-5b5c-8953-d14a8def1978}",
                 "hidden": false,
-                "name": "Windows PowerShell"
+                "name": "PowerShell 7",
+                "source": "Windows.Terminal.PowershellCore"
+            },
+            {
+                "backgroundImage": "C:\\Users\\Bruce\\OneDrive\\Pictures\\Graphics\\Wallpaper\\Windows Terminal\\Ubuntu\\ubuntu-logo32.png",
+                "backgroundImageAlignment": "bottomRight",
+                "backgroundImageOpacity": 0.19,
+                "backgroundImageStretchMode": "uniform",
+                "font": 
+                {
+                    "face": "UbuntuMono Nerd Font Mono"
+                },
+                "guid": "{2c4de342-38b7-51cf-b940-2309a097f518}",
+                "hidden": false,
+                "intenseTextStyle": "all",
+                "name": "Ubuntu",
+                "source": "Windows.Terminal.Wsl"
             },
             {
                 "experimental.retroTerminalEffect": true,
                 "guid": "{0caa0dad-35be-5f56-a8ff-afceeeaa6101}",
                 "hidden": false,
                 "name": "Command Prompt"
+            },
+            {
+                "experimental.retroTerminalEffect": true,
+                "guid": "{61c54bbd-c2c6-5271-96e7-009a87ff44bf}",
+                "hidden": false,
+                "name": "Windows PowerShell"
             },
             {
                 "backgroundImage": "C:\\Users\\Bruce\\OneDrive\\Pictures\\Graphics\\Wallpaper\\Windows Terminal\\Azure\\logo_azure.png",
@@ -74,42 +109,54 @@
                 "source": "Windows.Terminal.Azure"
             },
             {
-                "experimental.retroTerminalEffect": true,
-                "guid": "{c5b98eb9-0ded-534e-b3fd-5b2ab447503f}",
-                "hidden": false,
-                "name": "Developer Command Prompt for VS 2022",
-                "source": "Windows.Terminal.VisualStudio"
-            },
-            {
-                "experimental.retroTerminalEffect": true,
-                "guid": "{69218d1f-4599-5c12-be57-03b5b28ae002}",
-                "hidden": false,
-                "name": "Developer PowerShell for VS 2022",
-                "source": "Windows.Terminal.VisualStudio"
-            },
-            {
                 "backgroundImage": "C:\\Users\\Bruce\\OneDrive\\Pictures\\Graphics\\Wallpaper\\Windows Terminal\\Windows\\Fluent Windows - Dark - 4k.jpg",
                 "backgroundImageAlignment": "bottomRight",
+                "backgroundImageOpacity": 0.39,
                 "backgroundImageStretchMode": "uniformToFill",
-                "guid": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
+                "commandline": "\"C:\\Program Files\\PowerShell\\7\\pwsh.exe\"",
+                "elevate": true,
+                "guid": "{36a20edb-6b24-4123-8a5c-1605267cef36}",
                 "hidden": false,
-                "name": "PowerShell",
-                "source": "Windows.Terminal.PowershellCore"
+                "icon": "ms-appx:///ProfileIcons/pwsh.png",
+                "name": "PowerShell 7 (Elevated)",
+                "startingDirectory": "%USERPROFILE%"
             },
             {
-                "backgroundImage": "C:\\Users\\Bruce\\OneDrive\\Pictures\\Graphics\\Wallpaper\\Windows Terminal\\Ubuntu\\ubuntu-logo32.png",
-                "backgroundImageAlignment": "bottomRight",
-                "backgroundImageStretchMode": "uniform",
-                "guid": "{2c4de342-38b7-51cf-b940-2309a097f518}",
+                "altGrAliasing": true,
+                "antialiasingMode": "grayscale",
+                "closeOnExit": "automatic",
+                "commandline": "%SystemRoot%\\System32\\cmd.exe",
+                "cursorShape": "bar",
+                "elevate": true,
+                "experimental.retroTerminalEffect": true,
+                "font": 
+                {
+                    "size": 12.0
+                },
+                "guid": "{f768123d-ccd0-4b4d-8674-ea228168ea21}",
                 "hidden": false,
-                "name": "Ubuntu",
-                "source": "Windows.Terminal.Wsl"
+                "historySize": 9001,
+                "icon": "ms-appx:///ProfileIcons/{0caa0dad-35be-5f56-a8ff-afceeeaa6101}.png",
+                "name": "Command Prompt (Elevated)",
+                "padding": "8, 8, 8, 8",
+                "snapOnInput": true,
+                "startingDirectory": "%USERPROFILE%"
             },
             {
-                "guid": "{16208362-94fc-5b1f-a491-5b2624d5ab56}",
-                "hidden": true,
-                "name": "Visual Studio Debug Console",
-                "source": "VSDebugConsole"
+                "commandline": "%SystemRoot%\\System32\\cmd.exe /C chcp 65001 && plink \"(local) Dream Machine SE\"",
+                "guid": "{19c9e8ea-0b51-4139-9f1c-7b04a27799dc}",
+                "hidden": false,
+                "icon": "\ud83d\udcf6",
+                "name": "root@192.168.1.1 (plink, local)",
+                "suppressApplicationTitle": true
+            },
+            {
+                "commandline": "%SystemRoot%\\System32\\cmd.exe /C chcp 65001 && plink \"(local) minerva\"",
+                "guid": "{d1bd0714-5841-4210-92ce-dec2e4f0a8d8}",
+                "hidden": false,
+                "icon": "\ud83d\udcf6",
+                "name": "admin@minerva (plink, local)",
+                "suppressApplicationTitle": true
             }
         ]
     },
@@ -346,6 +393,7 @@
             "yellow": "#808000"
         }
     ],
+    "themes": [],
     "trimBlockSelection": true,
     "useAcrylicInTabRow": true
 }
